@@ -134,6 +134,7 @@ libinkpre_a_SOURCES =	\
 	sp-typeset-kplayout.cpp sp-typeset.h	\
 	sp-typeset-utils.cpp sp-typeset-utils.h	\
 	sp-use.cpp sp-use.h	\
+	sp-use-reference.cpp sp-use-reference.h	\
 	star-context.cpp star-context.h	\
 	streams-gzip.h streams-gzip.cpp	\
 	streams-handles.h streams-handles.cpp	\
