@@ -1,0 +1,41 @@
+#ifndef SEEN_SP_USE_REFERENCE_H
+#define SEEN_SP_USE_REFERENCE_H
+
+/*
+ * The reference corresponding to href of <use> element.
+ *
+ * Copyright (C) 2004 Bulia Byak
+ *
+ * Released under GNU GPL, read the file 'COPYING' for more information.
+ */
+
+#include <forward.h>
+#include <uri-references.h>
+
+
+class SPUseReference : public Inkscape::URIReference {
+public:
+    SPUseReference(SPObject *owner) : URIReference(owner) {}
+
+    SPItem *getObject() const {
+        return (SPItem *)URIReference::getObject();
+    }
+
+protected:
+    virtual bool _acceptObject(SPObject * const obj) const;
+
+};
+
+
+#endif /* !SEEN_SP_USE_REFERENCE_H */
+
+/*
+  Local Variables:
+  mode:c++
+  c-file-style:"stroustrup"
+  c-file-offsets:((innamespace . 0)(inline-open . 0)(case-label . +))
+  indent-tabs-mode:nil
+  fill-column:99
+  End:
+*/
+// vim: filetype=cpp:expandtab:shiftwidth=4:tabstop=8:softtabstop=4 :
